# pylogtracer

./: .flake8  .gitignore  .mypy.ini  CODE_QUALITY_REPORT.md  PYPI_CHECKLIST.md  README.md  RELEASE_READY.md  application_logs.txt  main.py  project_structure.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  template.sh  test_ask_mocked.py  test_ask_mode.py  test_classifier_debug.py  test_library_mode.py  test_logs_search.txt  test_search_standalone.py  tox.ini
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
src/pylogtracer/: Untitled-2.ipynb  __init__.py  application_logs.txt  logtracer.py
src/pylogtracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pylogtracer/agents/: qa_agent copy.py  qa_agent.py  root_cause_analyzer.py
src/pylogtracer/llm/: llm_factory.py
src/pylogtracer/multiagent/: context_bridge.py
src/pylogtracer/preprocessing/: error_extractor.py  error_type_classifier.py  smart_reader.py
src/pylogtracer/utils/: time_resolver.py
tests/unit/: test_unit_example.[y
