[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name            = "pylogtracer"
version         = "0.1.0"
description     = "Provider-agnostic log analysis package with LLM support and LangGraph ReAct agent"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
 
authors = [
    { name = "pylogtracer", email = "karthikkashi98@gmail.com" }
]
 
keywords = [
    "log analysis",
    "llm",
    "langchain",
    "langgraph",
    "log tracer",
    "root cause analysis",
    "devops",
    "observability",
    "ollama",
    "openai",
    "anthropic",
]
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
 
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "twine>=5.0",
    "build>=1.0",
]
 
[project.urls]
Homepage      = "https://github.com/KarthikKashi98/pylogtracer"
Repository    = "https://github.com/KarthikKashi98/pylogtracer"
Issues        = "https://github.com/KarthikKashi98/pylogtracer/issues"
Documentation = "https://github.com/KarthikKashi98/pylogtracer#readme"
Changelog     = "https://github.com/KarthikKashi98/pylogtracer/releases"
 
[tool.setuptools.packages.find]
where   = ["."]
exclude = ["tests*", "*.tests*"]
 
[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
verbosity = 2