[metadata]
name             = pylogtracer
version          = 0.1.2
author           = pylogtracer
author_email     = karthikkashi@gmail.com
description      = Provider-agnostic log analysis package with LLM support and LangGraph ReAct agent
long_description = file: README.md
long_description_content_type = text/markdown
url              = https://github.com/KarthikKashi98/pylogtracer
project_urls     =
    Bug Tracker   = https://github.com/KarthikKashi98/pylogtracer/issues
    Documentation = https://github.com/KarthikKashi98/pylogtracer#readme
    Source Code   = https://github.com/KarthikKashi98/pylogtracer
license          = MIT
keywords         =
    log analysis
    llm
    langchain
    langgraph
    log tracer
    root cause analysis
    devops
    observability
    ollama
    openai
    anthropic

classifiers      =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Logging
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir      =
    = src    
packages    = find:
python_requires  = >=3.9
install_requires =
    langchain>=0.2.0
    langchain-core>=0.2.0
    langchain-openai>=0.1.0
    langchain-anthropic>=0.1.0
    langchain-ollama>=0.1.0
    langgraph>=0.1.0
    pydantic>=2.0.0
    python-dotenv>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    twine>=5.0
    build>=1.0

[options.package_data]
pylogtracer= py.typed

[bdist_wheel]
universal = 0